# BokehNotebookInteractiveGraphsExample

./: ExampleNotebook.ipynb  pyproject.toml
